# routes/api.php
@@ -23,4 +23,5 @@ Route::middleware('auth:sanctum')->group(function(){
     Route::get('/customers', [CustomerController::class, 'index'])->name('customers');
     Route::post('/customers', [CustomerController::class, 'store'])->name('customer.store');
     Route::put('/customers/{id}', [CustomerController::class, 'update'])->name('customer.update');
+    Route::delete('/customers/{id}', [CustomerController::class, 'destroy'])->name('customer.delete');
 });
